refactor:used List.of instead of Array.asList